--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,9 @@
         }
       })(window.location);
     </script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Jura:wght@700&display=swap" rel="stylesheet">
     <!-- End Single Page Apps for GitHub Pages -->
   </head>
   <body>
